<resources>
    <string name="app_name">linkpal</string>
    <string name="sign_up">Sign up</string>

    <string name="placeholder">placeholder</string>
    <string name="phone">Phone number</string>

    <!--MainActivity-->
    <string name="log_in">Log in</string>
    <string name="create_account">Create new account</string>
    <string name="contact_us">Contact us</string>
    <string name="about">About us</string>

    <!--Log in page-->
    <string name="log_in_to_account">Login to your account</string>
    <string name="no_account">Do not have an account?</string>
    <string name="password_login">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="button_worker_login">Log in</string>

    <!--sign up page-->
    <string name="welcome">Welcome to linkpal</string>
    <string name="choose_account_type">What would you like to do</string>
    <string name="account_employer">hire</string>
    <string name="account_worker">find a job</string>

    <!--About page-->
    <string name="about_page_text">
        Find a wide market for your casual skills among businesses and homesteads within Mombasa. Are you proficient in plumbing,
        gardening, painting, wiring, manicure and pedicure, photography among many other fields listed on our platform? Then linkpal
        is just for you. Create an account and start receiving job invitations or send job requests. You can, on the other hand,
        create an account to post jobs and employ from our talented team.
    </string>

    <!--Sign up globals-->
    <string name="sign_up_firstname">First Name</string>
    <string name="sign_up_lastname">Last Name</string>
    <string name="sign_up_email">example@gmail.com</string>
    <string name="sign_up_password">Password (At least 6 characters) </string>
    <string name="sign_up_confirm_password">Confirm password</string>
    <string name="gender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>

    <!--Employer sign_up page-->
    <string name="employer_sign_up_label">Employer sign up</string>

    <!--Worker sign_up page-->
    <string name="worker_sign_up_label">Step 1 / 2</string>
    <string name="worker_sign_up_label2">Step 2 / 2</string>
    <string name="next_step">Next step</string>

    <!--Worker sign up page2-->
    <string name="job_field">Job field</string>
    <string name="location">Location</string>
    <string name="description">Describe your profile(At least 30 characters)</string>
    <string name="portfolio">My portfolio</string>
    <string name="profile_picture_description">Profile Picture</string>

    <!--Homepage Globals-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>

    <string name="username">%1$s  %2$s</string><!--placeholders for the 1st and 2nd string  %[argument_index$]format_specifier-->
    <string name="profile">My Profile</string>
    <string name="search">Search linkpal</string>
    <string name="logout">Logout</string>
    <string name="post_a_job">Post a job</string>
    <string name="desc_post_a_job">Button to post a job</string>

    <!--Location Alert dialog-->
    <string name="dialog_title">Update location</string>
    <string name="dialog_message">Allow linkpal to update your current location?</string>

    <!--Apply Job Alert Dialog-->
    <string name="job_dialog_title">Apply job</string>
    <string name="job_proposal">Draft a brief proposal</string>
    <string name="job_price">Quote your price</string>

    <!--Drawer Employer Menu-->
    <string name="rate_jobs">Rate previous jobs</string>
    <string name="job_requests">Job Requests</string>
    <string name="job_invites">Book a Worker</string>


    <!--Drawer Nav Header-->
    <string name="user_profile_pic">User profile picture</string>
    <string name="temp_username">Sample Username</string>
    <string name="temp_phone">07########</string>

    <!--Drawer Worker Menu-->
    <string name="pending_requests">Pending Requests</string>
    <string name="bookings">Bookings(Job invitations)</string>

    <!--Loading-->
    <string name="loading">Loading…</string>

    <!--Post a job-->
    <string name="job_type">Job type</string>
    <string name="job_location">Job situated at</string>
    <string name="job_description">Briefly give us the details of the job you want done</string>
    <string name="amount">Amount in Ksh</string>
    <string name="post">submit post</string>

    <!--posted jobs-->
    <string name="delete">delete</string>
    <string name="no_post">There are no pending jobs that you posted.</string>
    <string name="apply">apply</string>
    <string name="no_jobs">There are no jobs available.</string>

    <!--Job requests-->
    <string name="no_pending_requests">You have not applied for any jobs yet.</string>
    <string name="no_job_requests">There have been no requests on the jobs you posted yet.</string>
    <string name="recruit">recruit</string>
    <string name="decline">decline</string>

    <!--Rate jobs-->
    <string name="rating">rating</string>
    <string name="rate_me">Rate me</string>
    <string name="rate_job">Rate job</string>
    <string name="no_pending_ratings">There are no jobs to rate. Please post a job and hire from the platform.</string>

</resources>
