<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/employer_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/employer_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/job_requests"
            android:icon="@drawable/ic_job_requests"
            android:title="@string/job_requests" />

        <item
            android:id="@+id/book_worker"
            android:icon="@drawable/ic_book"
            android:title="@string/job_invites" />

        <item
            android:id="@+id/rate_jobs"
            android:icon="@drawable/ic_upgrade_account"
            android:title="@string/rate_jobs" />
    </group>
    <item
        android:id="@+id/log_out"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />
</menu>