<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MainActivity_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/fundi_text"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="80dp"
            android:textSize="55sp"/>


        <Button
            android:id="@+id/button_log_in"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white_shade"
            android:background="@drawable/border_white_button"
            android:text="@string/log_in"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp" />

        <Button
            android:id="@+id/button_create_account"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white_shade"
            android:background="@drawable/border_white_button"
            android:text="@string/create_account"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp" />
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/about_us" />

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about"
                android:textColor="@color/white_shade"
                android:layout_marginBottom="30dp"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/contact_us" />

            <TextView
                android:id="@+id/contact_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/contact_us"
                android:textColor="@color/white_shade"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>